tests/NormalTests/paczka1/small_fuzzy/68403053.err
Error in line 1: 1Fck0Ql5oS A517 46,94
Error in line 10: S959 A517 74,0
